<resources>

    <!--Change application name here-->
    <string name="app_name">AmazingCart</string>
    <!--............................-->


    <string name="search_title">Search</string>
    <string name="menu_item_shop">Store Home</string>
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_cart">Cart</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="network_error">Problem has occurred when loading data. Check your network connection</string>
    <string name="tab_item_explore">Explore</string>
    <string name="tab_item_categories">Categories</string>
    <string name="tab_item_featured">Featured</string>
    <string name="pre_total">PRE TOTAL</string>
    <string name="coupon">COUPON :</string>
    <string name="code">CODE</string>
    <string name="apply">APPLY</string>
    <string name="clear_cart_button">CLEAR CART</string>
    <string name="next_button">NEXT</string>
    <string name="please_text">Please,</string>
    <string name="sign_in_link_text">SIGN IN</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="launch_product_button">Launch products</string>
    <string name="subtotal">SUBTOTAL</string>
    <string name="tax">TAX</string>
    <string name="discount">DISCOUNT</string>
    <string name="total">TOTAL</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="company">Company</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="post_code">Post code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="order_notes_hint">Notes about your order. E.g special note for delivery</string>
    <string name="same_as_billing_button">SAME AS BILLING</string>
    <string name="created_by_serfcompany">Created By Serf Company</string>
    <string name="string2134">Amazing Cart</string>
    <string name="username">USERNAME</string>
    <string name="current_password">CURRENT PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="change_password_button">CHANGE PASSWORD</string>
    <string name="shipping">SHIPPING</string>
    <string name="checkout">CHECKOUT</string>
    <string name="your_coment">Your comment</string>
    <string name="WRITE_BUTTON">WRITE</string>
    <string name="order_date">OrderDate :</string>
    <string name="payment_method">Payment method :</string>
    <string name="status">Status :</string>
    <string name="phone_order_details">Phone :</string>
    <string name="shipping_order_details">Shipping :</string>
    <string name="subtotal_order_details">SUBTOTAL :</string>
    <string name="shipping_cost_order_details">SHIPPING COST :</string>
    <string name="discount_order_details">DISCOUNT :</string>
    <string name="total_order_details">TOTAL :</string>
    <string name="try_again_link">Try again</string>
    <string name="select_quantity">SELECT QUANTITY:</string>
    <string name="add_to_cart_button">ADD TO CART</string>
    <string name="read_more">READ MORE</string>
    <string name="description">DESCRIPTION</string>
    <string name="reviews">REVIEWS</string>
    <string name="registration_message">Registration completed successfully. Now you can sign in.</string>
    <string name="password">PASSWORD</string>
    <string name="remember_checkbox">REMEMBER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="click_here">CLICK HERE</string>
    <string name="sign_up_hint">TO CREATE NEW ACCOUNT</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_caps">EMAIL</string>
    <string name="first_name_caps">FIRST NAME</string>
    <string name="re_type_password">RE-TYPE PASSWORD</string>
    <string name="post">POST</string>
    <string name="subcategories_click">Subcategories (click to hide)</string>
    <string name="product_click">Products (click to hide)</string>
    <string name="try_again">Try again</string>
    <string name="update_button">UPDATE</string>
    <string name="billing_profile">BILLING PROFILE</string>
    <string name="update_billing_button">UPDATE BILLING</string>
    <string name="x"> x </string>
    <string name="click_to_view_order_details">Click to view order details</string>
    <string name="rating_count">/5</string>
    <string name="watch_reviews">Watch reviews</string>
    <string name="edit_quantity">(Edit quantity)</string>
</resources>
