<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/cartBillingDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/cartBillingToolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                />
        </android.support.design.widget.AppBarLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="visible"
            android:id="@+id/progressBarFrame">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/explore_progressBar"
                android:visibility="visible"
                android:layout_gravity="center"/>
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/billingFirstNameLayout"
                        android:layout_weight="1">
                        <android.support.v7.widget.AppCompatEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:singleLine="true"
                            android:selectAllOnFocus="true"
                            android:textSize="16sp"
                            android:background="@android:drawable/editbox_background_normal"
                            android:id="@+id/billingFirstName"
                            android:nextFocusUp="@id/billingFirstName"
                            android:nextFocusLeft="@id/billingFirstName"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/couponTextInputLayout"
                        android:layout_weight="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:singleLine="true"
                            android:textSize="16sp"
                            android:selectAllOnFocus="true"
                            android:id="@+id/billingLastName"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/billingCompanyLayout"
                        android:layout_weight="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/company"
                            android:singleLine="true"
                            android:selectAllOnFocus="true"
                            android:textSize="16sp"
                            android:id="@+id/billingCompanyName"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/billingAddress1Layout"
                        android:layout_weight="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address_line_1"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:textSize="16sp"
                            android:id="@+id/billingAddress1Text"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/billingAddress2Layout"
                        android:layout_weight="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address_line_2"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:textSize="16sp"
                            android:id="@+id/billingAddress2Text"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/billingPostCodeLayout"
                        android:layout_weight="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/post_code"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:textSize="16sp"
                            android:id="@+id/billingPostCodeText"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/billingCityLayout"
                        android:layout_weight="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city"
                            android:textSize="16sp"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:id="@+id/billingCityText"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/billingCountryLayout"
                        android:layout_weight="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/country"
                            android:singleLine="true"
                            android:selectAllOnFocus="true"
                            android:textSize="16sp"
                            android:id="@+id/billingCountryText"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/billingStateLayout"
                        android:layout_weight="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/state"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:textSize="16sp"
                            android:id="@+id/billingStateText"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/billingPhoneLayout"
                        android:layout_weight="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:singleLine="true"
                            android:selectAllOnFocus="true"
                            android:textSize="16sp"
                            android:id="@+id/billingPhoneText"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/billingEmailLayout"
                        android:layout_weight="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:textSize="16sp"
                            android:singleLine="true"
                            android:selectAllOnFocus="true"
                            android:id="@+id/billingEmailText"
                            android:inputType="textEmailAddress"
                            android:background="@android:drawable/editbox_background_normal"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next_button"
                    android:selectAllOnFocus="true"
                    android:id="@+id/cartBillingNextButton"
                    android:textColor="@color/colorTextIcons"
                    android:layout_marginBottom="16dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <include layout="@layout/navigation_view"/>

</android.support.v4.widget.DrawerLayout>